--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	font-family : 'Snell Roundhand Script', 'Comic Sans MS';
+	font-family : 'Snell Roundhand Script', 'Comic Sans MS', "Montserrat", "Helvetica", Arial, sans-serif;
 	font-size: 16px;
 	background-color: black;
 	color: white;
